# plantspeak

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/agent-governance/: README.md  agent-roles.json  arbitration-records.json  artifact-reviews.json  orchestrator-questions.json  quality-policy-results.json
docs/firmware/: architecture.md
docs/planning/: documentation-quality-audit.md  issue-sequencing-plan.md  risk-register.md  software-lead-execution-plan.md  staged-development-test-plan.md
docs/release-evidence/: README.md  manifest.json  release-candidate-manifest.json  tool-inventory.md
docs/reviews/: artifact-quality-gates.json  artifact-quality-gates.md  artifact-review-cycle.json  artifact-review-cycle.md  autopilot-code-review.md  security-review.md  test-report.md
docs/source-requirements/: GENERIC_DA14531_DEV_BOARD_TOOLCHAIN.md  Plantspeak ICD.docx  (+4 more)
firmware/: README.md  build.ps1  flash-smart-snippets.ps1  icd_command_table.h  icd_v013_command_table.h  pin_config.h  probe-jlink.ps1  run-live-icd-smoke.ps1
plantspeak/: __init__.py  cli.py  contracts.py  devices.py  evidence.py  icd.py  icd_v013.py  pins.py  requirements.py  trace.py  transport.py
plantspeak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_adapters.py  test_cli.py  test_contracts.py  test_devices.py  test_firmware_contracts.py  test_hil_gate.py  test_icd.py  test_icd_v013.py  test_release_evidence.py  test_requirements.py  test_security_transport.py  test_system_evidence.py  test_traceability.py  test_transport.py
(+73 files in other folders)
