[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plantspeak"
version = "0.1.0"
description = "Generated project for PlantSpeak"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
plantspeak = "plantspeak.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "hil: hardware-in-loop tests requiring an explicitly connected target board",
]

[tool.setuptools.packages.find]
include = ["plantspeak*"]
